fix aligning pictures on cards

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -35,7 +35,9 @@ main{
         border-radius: .5rem;
         height: 80px;
         background-repeat: no-repeat;
-        
+        display: flex;
+        justify-content: center;
+        padding: 0.5rem;
     }
 
     .hidden{
